[gd_scene load_steps=3 format=2]

[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=6]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
color = Color( 0.72549, 0.858824, 0.92549, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 784.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.352941, 0.486275, 0.768627, 1 )
text = "Main Menu"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 784.0
margin_bottom = 66.0

[node name="NewGame" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 193.0
margin_bottom = 31.0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.25098, 0.396078, 0.505882, 1 )
text = "New Game"
align = 1

[node name="StartGame" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 197.0
margin_right = 390.0
margin_bottom = 31.0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.25098, 0.396078, 0.505882, 1 )
text = "Start Game"
align = 1

[node name="SaveLoad" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 394.0
margin_right = 587.0
margin_bottom = 31.0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.25098, 0.396078, 0.505882, 1 )
text = "Save/Load"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 591.0
margin_right = 784.0
margin_bottom = 31.0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.25098, 0.396078, 0.505882, 1 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Label" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 784.0
margin_bottom = 101.0
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.321569, 0.423529, 0.901961, 1 )
text = "Exit"
align = 1

[connection signal="gui_input" from="VBoxContainer/HBoxContainer/NewGame" to="." method="_on_NewGame_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/StartGame" to="." method="_on_StartGame_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/SaveLoad" to="." method="_on_SaveLoad_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/Settings" to="." method="_on_Settings_gui_input"]
[connection signal="gui_input" from="VBoxContainer/Exit" to="." method="_on_Exit_gui_input"]
